# tegrastats-tui

./: Cargo.toml  LICENSE  README.md
src/: app.rs  main.rs  parser.rs
